dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__chat_empty.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
"┌ Chat ──────────────────────────────────────────┐"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
