dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__chat_with_messages.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
"┌ Chat ──────────────────────────────────────────┐"
"│<alice> hello everyone!                         │"
"│<bob> hey alice, how's it going?                │"
"│<alice> good! ready to watch?                   │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
"> typing something                                "
