dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__keybinding_bar_chat.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
" Tab  Next pane |  Enter  Send |  Esc  Clear |  Ctrl-C  Quit                    "
