dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__keybinding_bar_playlist.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
" Tab  Next pane |  a  Add |  d  Remove |  C-j/k  Move |  Ctrl-C  Quit           "
