dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__keybinding_bar_recent_series.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
" Tab  Next pane |  Enter  Browse |  Ctrl-C  Quit                                "
