dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__main_layout_120x40.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
"┌ Chat ────────────────────────────────────────────────────┐┌ Recent Series ───────────────────────────────────────────┐"
"│                                                          ││No media scanned yet                                      │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          │└──────────────────────────────────────────────────────────┘"
"│                                                          │┌ Users ───────────────────────────────────────────────────┐"
"│                                                          ││No users connected                                        │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          │└──────────────────────────────────────────────────────────┘"
"│                                                          │┌ Playlist ────────────────────────────────────────────────┐"
"│                                                          ││Empty playlist                                            │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"└──────────────────────────────────────────────────────────┘│                                                          │"
">                                                           └──────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Now Playing: Idle                                                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tab  Next pane |  Enter  Send |  Esc  Clear |  Ctrl-C  Quit                                                            "
