dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__player_status_idle.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────┐"
"│  [||]                                       0:00 / ??:?? │"
"└──────────────────────────────────────────────────────────┘"
