dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__player_status_playing.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────┐"
"│  Now Playing: Frieren - 01.mkv                           │"
"└──────────────────────────────────────────────────────────┘"
