dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__playlist_with_items.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
"┌ Playlist ────────────────────────────┐"
"│▶ Frieren - 01.mkv                    │"
"│  Frieren - 02.mkv                    │"
"│  Frieren - 03.mkv                    │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
